--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="Header-container">
 
@@ -91,5 +92,113 @@
 
         </div>
     </section>
+
+    <section class="Vagas">
+
+        <div class="Vagas-talentos">
+            <div class="Vagas-talentos-container">
+                <h2>Vagas abertas!</h2>
+                <p>Estamos procurando por talentos</p>
+                <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            </div>
+
+            <img src="img/talentos.png" alt="">
+        </div>
+
+        <div class="Vagas-abertas">
+            <div class="Vagas-container">
+                <div class="Vagas-content">
+                    <p>Design</p>
+
+                    <div class="Vagas-abertas">
+                        <div class="Vagas-abertas-card-container">
+                            <div class="Vagas-abertas-card">
+                                <h2>Product Designer</h2>
+                                <p>Full-time <span>Faixa salarial: R$7.000</span> </p>
+                            </div>
+                        </div>
+
+                        <div class="Vagas-abertas-card-container">
+                            <div class="Vagas-abertas-card">
+                                <h2>UX Designer</h2>
+                                <p>Full-time <span>Faixa salarial: R$6.000</span> </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <p>Desenvolvimento de Software</p>
+
+                    <div class="Vagas-abertas">
+                        <div class="Vagas-abertas-card-container">
+                            <div class="Vagas-abertas-card">
+                                <h2>Desenvolvedor(a) iOS</h2>
+                                <p>Full-time <span>Faixa salarial: R$8.000</span> </p>
+                            </div>
+                        </div>
+
+                        <div class="Vagas-abertas-card-container">
+                            <div class="Vagas-abertas-card">
+                                <h2>Desenvolvedor(a) Front-end</h2>
+                                <p>Full-time <span>Faixa salarial: R$7.000</span> </p>
+                            </div>
+                        </div>
+
+                        <div class="Vagas-abertas-card-container">
+                            <div class="Vagas-abertas-card">
+                                <h2>Desenvolvedor(a) Back-end</h2>
+                                <p>Full-time <span>Faixa salarial: R$8.000</span> </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="Depoimentos">
+        <div class="Depoimentos-container">
+            <div class="Depoimentos-content">
+
+                <div class="Depoimentos-text">
+                    <h2>Veja o que nossos colaboradores falam sobre nós</h2>
+                    <p>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+                </div>
+
+                <div class="Depoimentos-desenvolvedora">
+                    <img src="img/Avatar.png" alt="">
+
+                    <div class="Depoimentos-desenvolvedora-text">
+                        <p>Júlia Castro</p>
+                        <span>Desenvolvedora Web</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-text">
+                    <p>Acompanhe as nossas oportunidades</p>
+                    <span>Seja o primeiro a saber quando novas vagas serão abertas!</span>
+                </div>
+
+                <div class="footer-forms">
+                    <form action="">
+                        <input type="email" name="Email" placeholder="Seu e-mail" id="">
+                        <button type="submit">Cadastrar</button>
+                    </form>
+                </div>
+                
+            </div>
+        </div>
+
+        <p>© 2023 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
